--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
-org/
+### IntelliJ IDEA ###
 out/
-.idea/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-*.log
-*.class
-stepic.iml
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
